core/scanner.cc
/* Generated by re2c 0.13.5 */
/**
 * Clever programming language
 * Copyright (c) Clever Team
 *
 * This file is distributed under the MIT license. See LICENSE for details.
 */

#include <cstdio>
#include "core/scanner.h"
#include "core/parser.hh"
#include "core/ast.h"
#include "core/value.h"
#include "core/native_types.h"

namespace clever {

typedef Parser::token token;

Parser::token_type yylex(Parser::semantic_type* yylval,
	Parser::location_type* yyloc, Driver& driver, ScannerState& s) {
	const unsigned char* cursor = s.cur;
	int yylen;

next_token:
	if (YYCURSOR >= YYLIMIT) {
		RET(token::END);
	}

	s.yylex = cursor;


{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	if (YYGETCONDITION() < 1) {
		goto yyc_INITIAL;
	} else {
		if (YYGETCONDITION() < 2) {
			goto yyc_ST_COMMENT;
		} else {
			goto yyc_ST_MULTILINE_COMMENT;
		}
	}
/* *********************************** */
yyc_INITIAL:
	{
		static const unsigned char yybm[] = {
			/* table 1 .. 8: 0 */
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40, 168, 104, 168,  40, 168,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			168,  40,   8,  40,  40,  40,  40,  32, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 47,  47,  47,  47,  47,  47,  47,  47, 
			 45,  45,  40,  40,  40,  40,  40,  40, 
			 40,  44,  44,  44,  44,  44,  44,  44, 
			 44,  44,  44,  44,  44,  44,  44,  44, 
			 44,  44,  44,  44,  44,  44,  44,  44, 
			 44,  44,  44,  40,  16,  40,  40,  40, 
			 40,  44,  44,  44,  44,  44,  44,  44, 
			 44,  44,  44,  44,  44,  44,  44,  44, 
			 44,  44,  44,  44,  44,  44,  44,  44, 
			 44,  44,  44,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			 40,  40,  40,  40,  40,  40,  40,  40, 
			/* table 9 .. 10: 256 */
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			192, 192, 192, 192, 192, 192, 192, 192, 
			192, 192,   0,   0,   0,   0,   0,   0, 
			  0, 192, 192, 192, 192, 192, 192, 192, 
			192, 192, 192, 192, 192, 192, 192, 192, 
			192, 192, 192, 192, 192, 192, 192, 192, 
			192, 192, 192,   0,   0,   0,   0, 192, 
			  0,  64,  64,  64,  64,  64,  64,  64, 
			 64,  64,  64,  64,  64,  64,  64,  64, 
			 64,  64,  64,  64,  64,  64,  64,  64, 
			 64,  64,  64,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
			  0,   0,   0,   0,   0,   0,   0,   0, 
		};

		yych = *YYCURSOR;
		switch (yych) {
		case 0x00:	goto yy2;
		case '\t':
		case '\v':
		case '\r':
		case ' ':	goto yy5;
		case '\n':	goto yy7;
		case '!':	goto yy9;
		case '"':	goto yy10;
		case '#':	goto yy11;
		case '%':	goto yy13;
		case '&':	goto yy14;
		case '\'':	goto yy16;
		case '(':
		case ')':
		case ',':
		case ';':
		case '{':
		case '}':
		case '~':	goto yy17;
		case '*':	goto yy18;
		case '+':	goto yy19;
		case '-':	goto yy20;
		case '.':	goto yy21;
		case '/':	goto yy22;
		case '0':	goto yy23;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':	goto yy25;
		case '<':	goto yy26;
		case '=':	goto yy28;
		case '>':	goto yy29;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':	goto yy31;
		case '^':	goto yy33;
		case '_':
		case 'd':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'q':
		case 's':
		case 'u':
		case 'x':
		case 'y':
		case 'z':	goto yy34;
		case 'a':	goto yy36;
		case 'b':	goto yy37;
		case 'c':	goto yy38;
		case 'e':	goto yy39;
		case 'f':	goto yy40;
		case 'i':	goto yy41;
		case 'n':	goto yy42;
		case 'o':	goto yy43;
		case 'p':	goto yy44;
		case 'r':	goto yy45;
		case 't':	goto yy46;
		case 'v':	goto yy47;
		case 'w':	goto yy48;
		case '|':	goto yy49;
		default:	goto yy4;
		}
yy2:
		++YYCURSOR;
yy3:
		{ yylen = cursor - s.yylex; }
		{ RET(Parser::token_type(s.yylex[0])); }
yy4:
		yych = *++YYCURSOR;
		goto yy3;
yy5:
		++YYCURSOR;
		yych = *YYCURSOR;
		goto yy269;
yy6:
		{ yylen = cursor - s.yylex; }
		{ yyloc->step(); SKIP(); }
yy7:
		++YYCURSOR;
		yych = *YYCURSOR;
		goto yy267;
yy8:
		{ yylen = cursor - s.yylex; }
		{
		if (YYGETCONDITION() == yycST_COMMENT) {
			YYSETCONDITION(INITIAL);
		}
		yyloc->lines(yylen);
		yyloc->step();
		SKIP();
	}
yy9:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy264;
		goto yy3;
yy10:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);
		goto yy260;
yy11:
		++YYCURSOR;
		{ yylen = cursor - s.yylex; }
		{
		YYSETCONDITION(ST_COMMENT);
		SKIP();
	}
yy13:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy257;
		goto yy3;
yy14:
		++YYCURSOR;
		if ((yych = *YYCURSOR) == '&') goto yy255;
		if (yych == '=') goto yy253;
yy15:
		{ yylen = cursor - s.yylex; }
		{ RET(Parser::token_type(s.yylex[0])); }
yy16:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);
		goto yy247;
yy17:
		yych = *++YYCURSOR;
		goto yy15;
yy18:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy244;
		goto yy15;
yy19:
		yych = *++YYCURSOR;
		if (yych == '+') goto yy242;
		if (yych == '=') goto yy240;
		goto yy15;
yy20:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= '/') {
			if (yych <= ',') goto yy15;
			if (yych <= '-') goto yy238;
			if (yych <= '.') goto yy235;
			goto yy15;
		} else {
			if (yych <= '9') goto yy233;
			if (yych == '=') goto yy236;
			goto yy15;
		}
yy21:
		yych = *++YYCURSOR;
		if (yych <= '/') goto yy3;
		if (yych <= '9') goto yy231;
		goto yy3;
yy22:
		yych = *++YYCURSOR;
		if (yych <= '.') {
			if (yych == '*') goto yy225;
			goto yy15;
		} else {
			if (yych <= '/') goto yy227;
			if (yych == '=') goto yy229;
			goto yy15;
		}
yy23:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych == 'x') goto yy221;
		goto yy220;
yy24:
		{ yylen = cursor - s.yylex; }
		{
		const char* nstr = reinterpret_cast<const char*>(s.yylex);
		int64_t n = 0;

		for (int i = 0; i < yylen; ++i) {
			n = n * 10 + (nstr[i] - '0');
		}

		yylval->intlit = new ast::IntLit(n, *yyloc);

		RET(token::NUM_INTEGER);
	}
yy25:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		goto yy211;
yy26:
		++YYCURSOR;
		if ((yych = *YYCURSOR) <= ';') goto yy27;
		if (yych <= '<') goto yy203;
		if (yych <= '=') goto yy205;
yy27:
		{ yylen = cursor - s.yylex; }
		{ RET(token::LESS); }
yy28:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy201;
		goto yy15;
yy29:
		++YYCURSOR;
		if ((yych = *YYCURSOR) <= '<') goto yy30;
		if (yych <= '=') goto yy197;
		if (yych <= '>') goto yy195;
yy30:
		{ yylen = cursor - s.yylex; }
		{ RET(token::GREATER); }
yy31:
		++YYCURSOR;
		yych = *YYCURSOR;
		goto yy191;
yy32:
		{ yylen = cursor - s.yylex; }
		{
		yylval->ident = new ast::Ident(
			CSTRING(std::string(reinterpret_cast<const char*>(s.yylex), yylen)), *yyloc);

		RET(token::CONSTANT);
	}
yy33:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy188;
		goto yy15;
yy34:
		++YYCURSOR;
		yych = *YYCURSOR;
		goto yy55;
yy35:
		{ yylen = cursor - s.yylex; }
		{
		yylval->ident = new ast::Ident(
			CSTRING(std::string(reinterpret_cast<const char*>(s.yylex), yylen)), *yyloc);

		RET(token::IDENT);
	}
yy36:
		yych = *++YYCURSOR;
		if (yych == 'n') goto yy185;
		goto yy55;
yy37:
		yych = *++YYCURSOR;
		if (yych == 'r') goto yy180;
		goto yy55;
yy38:
		yych = *++YYCURSOR;
		switch (yych) {
		case 'a':	goto yy151;
		case 'l':	goto yy152;
		case 'o':	goto yy153;
		case 'r':	goto yy154;
		default:	goto yy55;
		}
yy39:
		yych = *++YYCURSOR;
		if (yych == 'l') goto yy140;
		goto yy55;
yy40:
		yych = *++YYCURSOR;
		if (yych <= 'i') {
			if (yych == 'a') goto yy117;
			if (yych <= 'h') goto yy55;
			goto yy118;
		} else {
			if (yych <= 'o') {
				if (yych <= 'n') goto yy55;
				goto yy119;
			} else {
				if (yych == 'u') goto yy120;
				goto yy55;
			}
		}
yy41:
		yych = *++YYCURSOR;
		if (yych == 'f') goto yy109;
		if (yych == 'm') goto yy111;
		goto yy55;
yy42:
		yych = *++YYCURSOR;
		if (yych == 'e') goto yy102;
		if (yych == 'u') goto yy103;
		goto yy55;
yy43:
		yych = *++YYCURSOR;
		if (yych == 'r') goto yy100;
		goto yy55;
yy44:
		yych = *++YYCURSOR;
		if (yych == 'r') goto yy81;
		if (yych == 'u') goto yy82;
		goto yy55;
yy45:
		yych = *++YYCURSOR;
		if (yych == 'e') goto yy75;
		goto yy55;
yy46:
		yych = *++YYCURSOR;
		if (yych == 'h') goto yy64;
		if (yych == 'r') goto yy65;
		goto yy55;
yy47:
		yych = *++YYCURSOR;
		if (yych == 'a') goto yy61;
		goto yy55;
yy48:
		yych = *++YYCURSOR;
		if (yych == 'h') goto yy56;
		goto yy55;
yy49:
		yych = *++YYCURSOR;
		if (yych == '=') goto yy50;
		if (yych == '|') goto yy52;
		goto yy15;
yy50:
		++YYCURSOR;
		{ yylen = cursor - s.yylex; }
		{ RET(token::BW_OR_EQUAL); }
yy52:
		++YYCURSOR;
		{ yylen = cursor - s.yylex; }
		{ RET(token::BOOLEAN_OR); }
yy54:
		++YYCURSOR;
		yych = *YYCURSOR;
yy55:
		if (yybm[256+yych] & 64) {
			goto yy54;
		}
		goto yy35;
yy56:
		yych = *++YYCURSOR;
		if (yych != 'i') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'l') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'e') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		RET(token::WHILE);
	}
yy61:
		yych = *++YYCURSOR;
		if (yych != 'r') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{ RET(token::VAR); }
yy64:
		yych = *++YYCURSOR;
		if (yych == 'r') goto yy71;
		goto yy55;
yy65:
		yych = *++YYCURSOR;
		if (yych == 'u') goto yy68;
		if (yych != 'y') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{ RET(token::TRY); }
yy68:
		yych = *++YYCURSOR;
		if (yych != 'e') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		yylval->true_ = new ast::TrueLit(*yyloc);
		RET(token::TRUE);
	}
yy71:
		yych = *++YYCURSOR;
		if (yych != 'o') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'w') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{ RET(token::THROW); }
yy75:
		yych = *++YYCURSOR;
		if (yych != 't') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'u') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'r') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'n') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		RET(token::RETURN);
	}
yy81:
		yych = *++YYCURSOR;
		if (yych == 'i') goto yy88;
		if (yych == 'o') goto yy89;
		goto yy55;
yy82:
		yych = *++YYCURSOR;
		if (yych != 'b') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'l') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'i') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'c') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{ RET(token::PUBLIC); }
yy88:
		yych = *++YYCURSOR;
		if (yych == 'v') goto yy95;
		goto yy55;
yy89:
		yych = *++YYCURSOR;
		if (yych != 'c') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'e') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 's') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 's') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		RET(token::THREAD);
	}
yy95:
		yych = *++YYCURSOR;
		if (yych != 'a') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 't') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'e') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{ RET(token::PRIVATE); }
yy100:
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{ RET(token::LOGICAL_OR); }
yy102:
		yych = *++YYCURSOR;
		if (yych == 'w') goto yy107;
		goto yy55;
yy103:
		yych = *++YYCURSOR;
		if (yych != 'l') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'l') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		yylval->nillit = new ast::NullLit(*yyloc);
		RET(token::NIL);
	}
yy107:
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		RET(token::NEW);
	}
yy109:
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		RET(token::IF);
	}
yy111:
		yych = *++YYCURSOR;
		if (yych != 'p') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'o') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'r') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 't') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		RET(token::IMPORT);
	}
yy117:
		yych = *++YYCURSOR;
		if (yych == 'l') goto yy136;
		goto yy55;
yy118:
		yych = *++YYCURSOR;
		if (yych == 'n') goto yy130;
		goto yy55;
yy119:
		yych = *++YYCURSOR;
		if (yych == 'r') goto yy128;
		goto yy55;
yy120:
		yych = *++YYCURSOR;
		if (yych != 'n') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'c') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 't') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'i') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'o') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'n') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		RET(token::FUNC);
	}
yy128:
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		RET(token::FOR);
	}
yy130:
		yych = *++YYCURSOR;
		if (yych != 'a') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'l') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'l') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'y') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{ RET(token::FINALLY); }
yy136:
		yych = *++YYCURSOR;
		if (yych != 's') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'e') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		yylval->false_ = new ast::FalseLit(*yyloc);
		RET(token::FALSE);
	}
yy140:
		yych = *++YYCURSOR;
		if (yych != 's') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'e') goto yy55;
		yyaccept = 3;
		yych = *(YYMARKER = ++YYCURSOR);
		if (yych <= 'Z') {
			if (yych <= '/') {
				if (yych == ' ') goto yy145;
			} else {
				if (yych <= '9') goto yy54;
				if (yych >= 'A') goto yy54;
			}
		} else {
			if (yych <= '`') {
				if (yych == '_') goto yy54;
			} else {
				if (yych == 'i') goto yy144;
				if (yych <= 'z') goto yy54;
			}
		}
yy143:
		{ yylen = cursor - s.yylex; }
		{
		RET(token::ELSE);
	}
yy144:
		yych = *++YYCURSOR;
		if (yych == 'f') goto yy150;
		goto yy55;
yy145:
		yych = *++YYCURSOR;
		if (yych == 'i') goto yy147;
yy146:
		YYCURSOR = YYMARKER;
		if (yyaccept <= 2) {
			if (yyaccept <= 1) {
				if (yyaccept <= 0) {
					goto yy3;
				} else {
					goto yy15;
				}
			} else {
				goto yy24;
			}
		} else {
			if (yyaccept <= 4) {
				if (yyaccept <= 3) {
					goto yy143;
				} else {
					goto yy216;
				}
			} else {
				goto yy249;
			}
		}
yy147:
		yych = *++YYCURSOR;
		if (yych != 'f') goto yy146;
		++YYCURSOR;
yy149:
		{ yylen = cursor - s.yylex; }
		{
		RET(token::ELSEIF);
	}
yy150:
		yych = *++YYCURSOR;
		if (yybm[256+yych] & 64) {
			goto yy54;
		}
		goto yy149;
yy151:
		yych = *++YYCURSOR;
		if (yych == 't') goto yy176;
		goto yy55;
yy152:
		yych = *++YYCURSOR;
		if (yych == 'a') goto yy172;
		goto yy55;
yy153:
		yych = *++YYCURSOR;
		if (yych == 'n') goto yy162;
		goto yy55;
yy154:
		yych = *++YYCURSOR;
		if (yych != 'i') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 't') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'i') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'c') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'a') goto yy55;
		yych = *++YYCURSOR;
		if (yych != 'l') goto yy55;
		++YYCURSOR;
		if (yybm[256+(yych = *YYCURSOR)] & 64) {
			goto yy54;
		}
		{ yylen = cursor - s.yylex; }
		{
		RET(token::CRITICAL);
	}
yy162:
		yych = *++YYCURSOR;
